<resources>
    <string name="app_name">Bitcoin Dashboard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="price">Price</string>
    <string name="address">Address</string>
    <string name="size">Size</string>
    <string name="hash">Hash</string>
    <string name="block_number">Block Number</string>
    <string name="bitcoin_value">USD per Bitcoin</string>


    <string name="search">Search</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>

    <string name="block">Block</string>
    <string name="current_price">Current Price</string>
    <string name="chart">Chart</string>
    <string name="balance">Balance</string>
    <string name="oneDayPrice">1 Day Price</string>
    <string name="fiveDayPrice">5 Day Price</string>
    <string name="qr_scan">QR Scan</string>

    <string-array name="navigation">
        <item>Current Price</item>
        <item>Chart</item>
        <item>Block</item>
        <item>Balance</item>
    </string-array>

</resources>
