<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
    <item
        android:title="@string/previous"
        android:id="@+id/menu_previous"
        app:showAsAction="never"/>

    <item
        android:title="@string/next"
        android:id="@+id/menu_next"
        app:showAsAction="never"/>

    <item android:title="@string/qr_scan"
        android:id="@+id/qrScan"
        android:icon="@android:drawable/ic_menu_camera"
        app:showAsAction="always" />


</menu>
