<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.temple.bitcoindashboard.BlockFragment"
    android:background="@color/blue">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/blockView1"
        android:textAlignment="center"
        android:textColor="#000000"
        android:layout_marginTop="85dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textAlignment="center"
        android:id="@+id/blockView2"
        android:textColor="#000000"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:id="@+id/blockView3"
        android:layout_marginBottom="50dp"
        android:textColor="#000000"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/size"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:textColor="#000000"
        android:textAlignment="center"
        android:layout_marginBottom="45dp"
        android:id="@+id/Size"
        android:layout_above="@+id/blockView3"
        android:layout_alignStart="@+id/Hash" />

    <TextView
        android:text="@string/hash"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:textColor="#000000"
        android:textAlignment="center"
        android:id="@+id/Hash"
        android:layout_above="@+id/blockView2"
        android:layout_alignStart="@+id/BlockName"
        android:layout_marginBottom="36dp" />

    <TextView
        android:text="@string/block_number"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:textColor="#000000"
        android:textAlignment="center"
        android:layout_marginTop="28dp"
        android:id="@+id/BlockName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
